tests/baselines/reference/importDeclWithDeclareModifier.errors.txt
tests/cases/compiler/importDeclWithDeclareModifier.ts(5,9): error TS1029: 'export' modifier must precede 'declare' modifier.
tests/cases/compiler/importDeclWithDeclareModifier.ts(5,27): error TS2304: Cannot find name 'x'.
tests/cases/compiler/importDeclWithDeclareModifier.ts(5,29): error TS2694: Namespace 'x' has no exported member 'c'.


==== tests/cases/compiler/importDeclWithDeclareModifier.ts (3 errors) ====
    module x {
        interface c {
        }
    }
    declare export import a = x.c;
            ~~~~~~
!!! error TS1029: 'export' modifier must precede 'declare' modifier.
                              ~
!!! error TS2304: Cannot find name 'x'.
                                ~
!!! error TS2694: Namespace 'x' has no exported member 'c'.
    var b: a;
    